fixed masonry grid alignment

--- a/src/components/BirthdayCard/birthday-card.module.scss
+++ b/src/components/BirthdayCard/birthday-card.module.scss
@@ -1,5 +1,9 @@
 @import './src/styles/base/base';
 
+.bdayCardTop {
+    height: 4.8rem;
+}
+
 .birthDayCardContainer {
     max-width: 41.6rem;
 }
