--- a/src/components/NewsAndStoriesSection/_mansonry.module.scss
+++ b/src/components/NewsAndStoriesSection/_mansonry.module.scss
@@ -1,14 +1,17 @@
+@import './src/styles/base/base';
+
 .masonryGrid {
+    column-gap: $flex-column-gap;
     display: flex;
-    margin-left: -5rem;
+    justify-content: space-between;
+    margin-top: 2.4rem;
     width: auto;
 }
 
 .masonryGridColumn {
     background-clip: padding-box;
-    padding-left: 5rem;
 }
 
 .masonryGridColumn > div section {
-    margin-bottom: 30px;
+    margin-bottom: 4.8rem;
 }
